[tool.poetry]
name = "repl_python3_Tkinter-Registration-Form"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.9.0"
openai = "^0.22.1"
pyttsx3 = "^2.90"
gym = "^0.25.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
